--- a/About.html
+++ b/About.html
@@ -28,8 +28,8 @@
     </div>
     <a class="nav_img" href="/Home.html"><img src="image/header/logo.png" alt="logo"></a>
     <div class="nav_block">
-      <a class="nav_block_content" href="#" >Blog</a>
-      <a class="nav_block_content" href="#" >Contact</a>
+      <a class="nav_block_content" href="/Blog.html" >Blog</a>
+      <a class="nav_block_content" href="/Contact.html" >Contact</a>
       <button class="burger">
         <img src="image/header/icon_menu.svg" class="burger_svg" alt="burger">
       </button>
@@ -37,9 +37,19 @@
   </nav>
 </header>
 
-<div class="breadcrumbs">Home/ About</div>
-
 <section class="placeholder">
+  <div class="breadcrumbs">
+    <div class="container">
+      <ul class="breadcrumbs_list">
+        <li class="breadcrumbs_item">
+          <a href="/Home.html" class="breadcrumbs_link">Home/</a>
+        </li>
+        <li class="breadcrumbs_item">
+          <a href="/About.html" class="breadcrumbs_link"> About</a>
+        </li>
+      </ul>
+    </div>
+  </div>
   <div class="container_fluid">
     <div class="placeholder_bg">
         <div class="placeholder_text title">About Us</div>
