--- a/Blog.html
+++ b/Blog.html
@@ -36,7 +36,18 @@
     </nav>
 </header>
 
-<div class="breadcrumbs">Home/ Blog</div>
+<div class="breadcrumbs">
+    <div class="container">
+        <ul class="breadcrumbs_list">
+            <li class="breadcrumbs_item">
+                <a href="/Home.html" class="breadcrumbs_link">Home/</a>
+            </li>
+            <li class="breadcrumbs_item">
+                <a href="/Blog.html" class="breadcrumbs_link"> Blog</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 <section class="blog">
     <div class="container">
