--- a/Gallery.html
+++ b/Gallery.html
@@ -29,15 +29,26 @@
         </div>
         <a class="nav_img" href="/Home.html"><img src="image/header/logo.png" alt="logo"></a>
         <div class="nav_block">
-            <a class="nav_block_content" href="#" >Blog</a>
-            <a class="nav_block_content" href="#" >Contact</a>
+            <a class="nav_block_content" href="/Blog.html" >Blog</a>
+            <a class="nav_block_content" href="/Contact.html" >Contact</a>
             <button class="burger">
                 <img src="image/header/icon_menu.svg" class="burger_svg" alt="burger">
             </button>
         </div>
     </nav>
 </header>
-<div class="breadcrumbs">Home/ Gallery</div>
+<div class="breadcrumbs">
+    <div class="container">
+        <ul class="breadcrumbs_list">
+            <li class="breadcrumbs_item">
+                <a href="/Home.html" class="breadcrumbs_link">Home/</a>
+            </li>
+            <li class="breadcrumbs_item">
+                <a href="/Gallery.html" class="breadcrumbs_link"> Gallery</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 <section class="works">
     <div class="container_fluids">
