--- a/Home.html
+++ b/Home.html
@@ -27,8 +27,8 @@
             </div>
             <a class="nav_img" href="/Home.html"><img src="image/header/logo.png" alt="logo"></a>
             <div class="nav_block">
-                <a class="nav_block_content" href="#" >Blog</a>
-                <a class="nav_block_content" href="#" >Contact</a>
+                <a class="nav_block_content" href="/Blog.html" >Blog</a>
+                <a class="nav_block_content" href="/Contact.html" >Contact</a>
                 <a href="/Home.html" class="burger">
                     <img src="image/header/icon_menu.svg" class="burger_svg" alt="burger">
                 </a>
