--- a/Single_post.html
+++ b/Single_post.html
@@ -36,7 +36,21 @@
     </nav>
 </header>
 
-<div class="breadcrumbs">Home/ Blog/ Single Post</div>
+<div class="breadcrumbs">
+    <div class="container">
+        <ul class="breadcrumbs_list">
+            <li class="breadcrumbs_item">
+                <a href="/Home.html" class="breadcrumbs_link">Home/</a>
+            </li>
+            <li class="breadcrumbs_item">
+                <a href="/About.html" class="breadcrumbs_link">About/</a>
+            </li>
+            <li class="breadcrumbs_item">
+                <a href="/Single_post.html" class="breadcrumbs_link">Single Post</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 <section class="blog">
     <div class="container">
